# django_ecommerce

./: README.md  pyproject.toml
.github/workflows/: main_eelaecommerce.yml
ecommerce/: settings.py  urls.py
static/: styles.css
static/js/: auth.js  script.js
store/: admin.py  forms.py  urls.py  views.py
store/fixtures/: initial_data.json
store/migrations/: 0001_initial.py  0002_pedido_itempedido.py
store/models/: categoria.py  itempedido.py  pedido.py  producto.py
store/templates/: base.html  cart.html  catalog.html  contact.html  index.html  signin.html  signup.html
